# parallel-cmp-c

./: CMakeLists.txt  empty.c  histogram-parallel.c  histogram-serial.c  histogram.h  matmul-parallel.c  matmul-serial.c  matmul.h  quicksort-parallel.c  quicksort-serial.c  quicksort.h  random-num.c
